chore: fix vh overflow

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,7 @@
     "name": "Medlunch",
     "short_name": "Medlunch",
     "lang": "en-US",
-    "description": "Nourish Your Minds, One Game at a Time!",
+    "description": "nourish your minds, one game at a time!",
     "categories": [
         "productivity"
     ],
